--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
             margin: 0;
             padding: 0;
         }
+             .logo {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            width: 100px; /* Ajustează dimensiunea după preferință */
+            height: auto;
+        }
         .container {
             max-width: 1200px;
             margin: 0 auto;
@@ -50,7 +57,13 @@
             color: #fff; /* Text alb pentru descriere */
             margin-top: 10px;
         }
-
+<body>
+    <img src="c732dd66-11de-46de-b95e-034981c94d1c.jpeg" alt="Casa Buzoiană" class="logo">
+    <div class="container">
+        <div class="about-us">
+            <h2>Despre Noi</h2>
+            <p>Casa Buzoiană este o firmă dedicată promovării și comercializării produselor tradiționale din regiunea Buzău...</p>
+        </div>
         .product-grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
