--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            width: 100px; /* Ajustează dimensiunea după preferință */
+            width: 100px; 
             height: auto;
         }
         .container {
@@ -54,10 +54,9 @@
         }
         .about-us p {
             font-size: 16px;
-            color: #fff; /* Text alb pentru descriere */
+            color: #fff;
             margin-top: 10px;
         }
-<body>
     <img src="c732dd66-11de-46de-b95e-034981c94d1c.jpeg" alt="Casa Buzoiană" class="logo">
     <div class="container">
         <div class="about-us">
