--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             color: #fff;
             margin-top: 10px;
         }
-    <img src="c732dd66-11de-46de-b95e-034981c94d1c.jpeg" alt="Casa Buzoiană" class="logo">
+    <img src="c732dd66-11de-46de-b95e-034981c94d1c.jpeg" alt="Casa Buzoiană" class="logo" />
     <div class="container">
         <div class="about-us">
             <h2>Despre Noi</h2>
@@ -103,13 +103,11 @@
         .description span {
             font-weight: bold;
         }
-
-        /* Meniul de navigație */
         header nav {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #ff7f00; /* Meniul portocaliu */
+            background-color: #ff7f00; 
             padding: 10px 20px;
         }
         header nav a {
